--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="apple-touch-icon" href="">
     <link rel="manifest" href="">
     <title>Online Paluwagan November Batch</title>
-    <link href="../paluwagan/2.5a8fe931.chunk.css" rel="stylesheet">
-    <link href="../paluwagan/main.b9286e5f.chunk.css" rel="stylesheet">
+    <link href="../2.5a8fe931.chunk.css" rel="stylesheet">
+    <link href="../main.b9286e5f.chunk.css" rel="stylesheet">
     <style></style>
     <style data-styled="active" data-styled-version="5.1.1"></style>
 </head>
@@ -84,8 +84,8 @@
         i.push = r, i = i.slice(); for (var a = 0; a < i.length; a++) r(i[a]); var p = f;
         t() }([])
     </script>
-    <script src="../paluwagan/2.e5fb1de8.chunk.js"></script>
-    <script src="../paluwagan/main.c3d32a81.chunk.js"></script>
+    <script src="../2.e5fb1de8.chunk.js"></script>
+    <script src="../main.c3d32a81.chunk.js"></script>
 </body>
 
 </html>
